--- a/templates/Judge/SearchRecords.html
+++ b/templates/Judge/SearchRecords.html
@@ -6,7 +6,7 @@
 <head>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-    var myVar = setInterval(myTimer1, 1000);
+    var myVar1 = setInterval(myTimer1, 1000);
 
     function myTimer1() 
     {
@@ -15,25 +15,25 @@
         if (d!=null)
         {
             swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-danger" });
-            clearInterval(myVar);
+            clearInterval(myVar1);
             var a = document.createElement('a');
-            a.href ="";  
-            setTimeout(function(){a.click()},2000);
+            // a.href ="";  
+            // setTimeout(function(){a.click()},2000);
         }
     }
 </script>
  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-    var myVar1 = setInterval(myTimer, 1000);
+    var myVar2 = setInterval(myTimer2, 1000);
 
-    function myTimer() 
+    function myTimer2() 
     {
         var d=document.getElementById('error-msg');
         //console.log(d);
         if (d!=null)
         {
             swal({ title:"Opps!", text: "Something went wrong!", type: "error", buttonsStyling: false, confirmButtonClass: "btn btn-danger" });
-            clearInterval(myVar1);
+            clearInterval(myVar2);
             var a = document.createElement('a');
             a.href ="{{url_for('Records')}}";  
             setTimeout(function(){a.click()},2000);
@@ -81,12 +81,15 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
         {%if 'judge'==di['mode'] %}
 
-     <div class="wrapper">
+    <div class="wrapper">
         <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
@@ -100,20 +103,9 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
-                                    <li >
+                            <li >
                                         <a  href="{{url_for('PreviousJudgements')}}" >
                                           Previous Judgements
                                                                            </a>
@@ -133,7 +125,7 @@
                                     
                                     
                                     
-                                    <li>
+                                    <li >
                                         <a href="{{url_for('Cases')}}" >
         
                                         
@@ -141,11 +133,6 @@
                                          </a>
                                     </li>
                                     
-                                    <li>
-                                        <a href="/Logout" >
-                                            Logout
-                                        </a>
-                                    </li>
                             
                         </ul>
                         
@@ -154,11 +141,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -178,25 +162,20 @@
                                   View Account
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
                     
                 </div>
-            </nav>
-           <div class="content">
+            </nav>           <div class="content">
                 <div class="container-fluid">
                     
                     <div class="row">
@@ -299,7 +278,12 @@
                                                                     <td>
                                                                         Verdict Date
                                                                     </td>
-                                                                   
+                                                                   <td>
+                                                                       Winning Cient ID
+                                                                   </td>
+                                                                   <td>
+                                                                       Winning Lawyer ID
+                                                                   </td>
                                                                 </tr>
                                                                 {% for case in Ccases %}
                                                                     <tr>
