--- a/templates/Judge/PreviousJudgements.html
+++ b/templates/Judge/PreviousJudgements.html
@@ -44,11 +44,15 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
-	{%if 'judge'==di['mode'] %}
-     <div class="wrapper">
+        {%if 'judge'==di['mode'] %}
+
+    <div class="wrapper">
         <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
@@ -62,20 +66,9 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
-                                    <li class="active">
+                            <li class="active" >
                                         <a  href="{{url_for('PreviousJudgements')}}" >
                                           Previous Judgements
                                                                            </a>
@@ -95,7 +88,7 @@
                                     
                                     
                                     
-                                    <li>
+                                    <li >
                                         <a href="{{url_for('Cases')}}" >
         
                                         
@@ -104,11 +97,6 @@
                                     </li>
                                     
                             
-                                    <li>
-                                        <a href="/Logout" >
-                                            Logout
-                                        </a>
-                                    </li>
                         </ul>
                         
             </div>
@@ -116,11 +104,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -140,25 +125,20 @@
                                   View Account
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
                     
                 </div>
-            </nav>
-           <div class="content">
+            </nav>           <div class="content">
                 <div class="container-fluid">
                         <div class="row-sm-8">
                             <div class="card">
@@ -259,7 +239,7 @@
                         
                     </div>
                     
-                </div>
+                
 
                 
                     
