--- a/templates/Lawfirm/ClientRequestsLawFirm.html
+++ b/templates/Lawfirm/ClientRequestsLawFirm.html
@@ -60,10 +60,14 @@
         }
     </script>
     
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
-	{%if 'law firm'==di['mode'] %}
+        {%if 'law firm'==di['mode'] %}
+
     <div class="wrapper">
         <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
@@ -78,20 +82,9 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
-                    <li >
+                            <li >
                         <a  href="{{url_for('HiringLawyers')}}" >
                         Recruit Lawyers
                                                         </a>
@@ -101,7 +94,7 @@
                                   Associated Lawyers
                                                                    </a>
                             </li>
-                            <li >
+                            <li class="active">
                                 <a  href="{{url_for('ClientRequestsLawFirm')}}" >
                                   Client Requests
                                                                    </a>
@@ -116,17 +109,12 @@
                                   Check Firm Earnings wrt Clients/Lawyers
                                                                    </a>
                             </li>
-                             <li class="active">
+                             <li >
                                 <a href="{{url_for('WinLose')}}" >
                                   Total Wins/Loses
                                                                    </a>
                             </li>                                                        
-                                                
-                            <li>
-                                <a href="/Logout" >
-                                    Logout
-                                </a>
-                            </li>
+                    
                         </ul>
                         
             </div>
@@ -134,11 +122,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -147,7 +132,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        
+
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -158,25 +143,21 @@
                                   View Account
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
                     
                 </div>
             </nav>
-  
+           
             
             <div class="content">
                 <div class="container-fluid">
