--- a/templates/Lawyer/ClientRequests.html
+++ b/templates/Lawyer/ClientRequests.html
@@ -61,11 +61,15 @@
         }
         
     </script>
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
-	{%if 'lawyer'==di['mode'] %}
-   <div class="wrapper">
+        {%if 'lawyer'==di['mode'] %}
+
+    <div class="wrapper">
         <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
@@ -79,20 +83,9 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
-                            <li >
+                           <li class="active">
                                 <a  href="{{url_for('ClientRequests')}}" >
                                   Client Requests
                                                                    </a>
@@ -107,7 +100,7 @@
                                   Active/Pending Cases
                                                                    </a>
                             </li>
-                             <li class="active">
+                             <li >
                                 <a href="{{url_for('Schedule')}}" >
                                   Schedule For The Day
                                                                    </a>
@@ -122,11 +115,7 @@
                                   Request Payement
                                                                    </a>
                             </li>
-                            <li>
-                                <a href="/Logout" >
-                                    Logout
-                                </a>
-                            </li>
+                            
                             
                         </ul>
                         
@@ -135,11 +124,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -159,18 +145,14 @@
                                   View Account
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
