--- a/templates/Officer/CaseStatements.html
+++ b/templates/Officer/CaseStatements.html
@@ -82,6 +82,9 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
@@ -101,18 +104,7 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
                             <li >
                                 <a  href="{{url_for('FileFIR')}}" >
@@ -129,12 +121,12 @@
                                   Schedule For The Day
                                                                    </a>
                             </li>                            
-                            <li>
+                            <li >
                                 <a href="{{url_for('DocUploadStatus')}}" >
                                   Document Upload Status
                                                                    </a>
                             </li>
-                            <li class="active">
+                            <li  class="active">
                                 <a href="{{url_for('CaseStatements')}}" >
                                  Update Case Statements
                                                                    </a>
@@ -144,12 +136,7 @@
                                      View Case Related Documents
                                                                    </a>
                             </li>
-                                                                                 
-                            <li>
-                                <a href="/Logout" >
-                                    Logout
-                                </a>
-                            </li>              
+                           
                             
                         </ul>
                         
@@ -158,11 +145,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -171,29 +155,25 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        
+
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                                                     
                                
-                             <!-- <li>
+                             <li>
                                 <a href="{{url_for('Account')}}" >
                                   View Account
                                                                    </a>
-                            </li> -->
+                            </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
