--- a/templates/Officer/SetHearing.html
+++ b/templates/Officer/SetHearing.html
@@ -78,11 +78,15 @@
         }
     </script>
     
+<style>
+    .link123 { color: #000000; font-size: large; pointer-events: none;} /* CSS link color */
+  </style>
 </head>
 
 <body>
-	{%if 'officer'==di['mode'] %}
-   <div class="wrapper">
+        {%if 'officer'==di['mode'] %}
+
+    <div class="wrapper">
         <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
@@ -96,18 +100,7 @@
             </div>
            
             <div class="sidebar-wrapper">
-                <div class="user">
-                    
-                    <div class="info">
-                        <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            {{di["username"]}}
-                           
-                       
-                        </a>
-                        
-                        
-                    </div>
-                </div>
+                
                 <ul class="nav ">
                             <li >
                                 <a  href="{{url_for('FileFIR')}}" >
@@ -124,7 +117,7 @@
                                   Schedule For The Day
                                                                    </a>
                             </li>                            
-                            <li>
+                            <li >
                                 <a href="{{url_for('DocUploadStatus')}}" >
                                   Document Upload Status
                                                                    </a>
@@ -139,12 +132,7 @@
                                      View Case Related Documents
                                                                    </a>
                             </li>
-                            <li>
-                                <a href="/Logout" >
-                                    Logout
-                                </a>
-                            </li>                                              
-                                                
+                           
                             
                         </ul>
                         
@@ -153,11 +141,8 @@
         <div class="main-panel">
             <nav class="navbar navbar-transparent navbar-absolute">
                 <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
+                    <div class="navbar-minimize" data-active-color="magic">
+                        <a class="link123" disabled>Welcome {{di.username}}</a>
                     </div>
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse">
@@ -166,37 +151,31 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        
+
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                                                     
-                            <!--    
+                               
                              <li>
                                 <a href="{{url_for('Account')}}" >
                                   View Account
                                                                    </a>
-                            </li> -->
+                            </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
-                        <form class="navbar-form navbar-right" role="search">
-                            <div class="form-group form-search is-empty">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="material-input"></span>
-                            </div>
-                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                                <i class="material-icons">search</i>
-                                <div class="ripple-container"></div>
-                            </button>
-                        </form>
+                        
                         
                     </div>
                         
                     
                 </div>
-            </nav>
-    
-            
+            </nav>            
             <div class="content">
                 <div class="container-fluid">
  
