fixed officer signout as well as typo in client pages

--- a/templates/Clients/ClientAccount.html
+++ b/templates/Clients/ClientAccount.html
@@ -134,7 +134,7 @@
                               
                              <li>
                                 <a href="{{url_for('Payment')}}" >
-                                  Make Payement
+                                  Make Payment
                                                                    </a>
                             </li>
                             
