--- a/templates/Clients/Payment.html
+++ b/templates/Clients/Payment.html
@@ -132,7 +132,7 @@
                               
                              <li class="active">
                                 <a href="{{url_for('Payment')}}" >
-                                  Make Payement
+                                  Make Payment
                                                                    </a>
                             </li>
                             
