--- a/templates/Officer/SetHearing.html
+++ b/templates/Officer/SetHearing.html
@@ -163,7 +163,7 @@
                                                                    </a>
                             </li>
                             <li>
-                                <a href="/Logout" >
+                                <a href="/Login" >
                                     Logout
                                 </a>
                             </li>
