--- a/templates/Clients/FindFirm.html
+++ b/templates/Clients/FindFirm.html
@@ -96,7 +96,7 @@
                               
                              <li>
                                 <a href="{{url_for('Payment')}}" >
-                                  Make Payement
+                                  Make Payment
                                                                    </a>
                             </li>
                             
