--- a/templates/Officer/FileFIR.html
+++ b/templates/Officer/FileFIR.html
@@ -144,7 +144,7 @@
                                                                    </a>
                             </li>
                             <li>
-                                <a href="/Logout" >
+                                <a href="/Login" >
                                     Logout
                                 </a>
                             </li>
