--- a/templates/Officer/ScheduleOfficer.html
+++ b/templates/Officer/ScheduleOfficer.html
@@ -129,7 +129,7 @@
                                                                    </a>
                             </li>
                             <li>
-                                <a href="/Logout" >
+                                <a href="/Login" >
                                     Logout
                                 </a>
                             </li>
