Fixed missing footer

--- a/templates/Loginnew.html
+++ b/templates/Loginnew.html
@@ -126,7 +126,7 @@
                                     </div>
                                     <div class="footer text-center">
                                         <button type="submit" class="btn btn-rose btn-simple btn-wd btn-lg">Let's go</button>
-                                        <a href="{{ url_for('ScheduleOfficer')}}" class="btn btn-rose btn-simple btn-wd btn-lg">Sign in as an Officer</button>
+                                        <a href="{{ url_for('ScheduleOfficer')}}" class="btn btn-rose btn-simple btn-wd btn-lg">Sign in as an Officer</a>
 
                                     </div>
                                 </div>
